[gd_scene load_steps=4 format=3 uid="uid://dciv4uqmqbo6y"]

[ext_resource type="Script" path="res://scripts/lemur_connectors_1_3.gd" id="1_pib17"]
[ext_resource type="Script" path="res://scripts/VBoxContainerShake.gd" id="2_pnkc6"]
[ext_resource type="Texture2D" uid="uid://b8s25t41llmke" path="res://Arts/aseprite/menu_ui/star.png" id="3_xgrvc"]

[node name="lemur_connectors_1_3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pib17")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_pnkc6")

[node name="Task" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "W brakujące pole wybierz odpowiednie wyrażenie, aby zdanie było prawdziwe"

[node name="QuestionImage" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sentence" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Answers" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="A1" type="Button" parent="VBoxContainer/Answers"]
layout_mode = 2
text = "I"

[node name="A2" type="Button" parent="VBoxContainer/Answers"]
layout_mode = 2
text = "LUB"

[node name="A3" type="Button" parent="VBoxContainer/Answers"]
layout_mode = 2
text = "NIE"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Particle" type="CPUParticles2D" parent="."]
position = Vector2(512, 0)
emitting = false
amount = 100
texture = ExtResource("3_xgrvc")
emission_shape = 1
emission_sphere_radius = 112.18
spread = 180.0
initial_velocity_min = 9.0
initial_velocity_max = 9.0

[connection signal="pressed" from="VBoxContainer/Answers/A1" to="." method="_on_a_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Answers/A2" to="." method="_on_a_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Answers/A3" to="." method="_on_a_3_pressed"]
